--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -12,3 +12,52 @@ table {
 table, th, td {
     border: 1px solid;
 }
+
+.table-header, .table-body, .table-footer {
+    border: 1px solid #ccc;
+    width: 24em;
+    min-width: 24em;
+    max-width: 24em;
+}
+
+.table-header, .table-footer {
+    background: #ddd;
+}
+
+.table-header {
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.table-footer {
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
+.numeral, .left-panel, .right-panel {
+    display: inline-block;
+    /*padding-left: 0.5em;
+    padding-right: 1em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;*/
+} 
+
+.table-body>div {
+    border-bottom: 1px solid #ccc;
+}
+
+.left-panel, .right-panel {
+    width: 10em;
+    min-width: 10em;
+    max-width: 10em;
+} 
+
+.right-panel, .numeral {
+    text-align: "right";
+}
+
+.numeral {
+    width: 2em;
+    min-width: 2em;
+    max-width: 2em;
+}
